--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,6 +9,7 @@
     border: 1px solid black;
     width: 90%;
     height: 40px;
+    border-radius: 20px;
 }
 
 .column-operator {
@@ -17,7 +18,8 @@
     justify-content: center;
 }
 
-.column-operator div {
+.column-operator button {
+    border: none;
     background-color: rgb(65, 240, 74);
     width: 60px;
     height: 60px;
@@ -28,6 +30,7 @@
 
 
 .OperatorRed  {
+    border: none;
     background-color: rgb(255, 102, 56);
     width: 60px;
     height: 60px;
@@ -36,7 +39,16 @@
     border-radius: 50px;
 }
 
+.OperatorRed:hover{
+    transition: 0.7s ;
+    transform: rotateY(20deg); 
+    background-color: rgb(253, 70, 14);  
+}
+
+
+
 .OperatorClick  {
+    border:none;
     background-color: rgb(59, 56, 255);
     width: 60px;
     height: 60px;
@@ -45,7 +57,14 @@
     border-radius: 50px;
 }
 
-.column-operator div p {
+.OperatorClick:hover{
+    transition: 0.7s ;
+    transform: rotateY(20deg); 
+    background-color: rgb(29, 25, 241);
+
+}
+
+.column-operator button p {
     font-size: 30px;
     margin-bottom:0px;
     margin-top:5px;
@@ -58,7 +77,14 @@
 }
 
 .column-number div {
-    
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+}
+
+.column-number .number {
+    background-color: transparent;
+    border: none;   
     width: 60px;
     height: 60px;
     margin: 10px;
@@ -66,8 +92,21 @@
     border-radius: 50px;
 }
 
-.column-number div p {
+.column-number button p {
     font-size: 30px;
     margin-bottom:0px;
     margin-top:5px;
 }
+
+.column-number .number:hover{
+    transition: 0.7s ;
+    transform: rotateY(20deg);
+    background-color: rgb(248, 248, 248);
+    
+}
+
+.column-operator button:hover{
+    transition: 0.7s ;
+    transform: rotateY(20deg);
+    background-color: rgb(32, 240, 13);
+}   
